--- a/src/components/Home/Banner.css
+++ b/src/components/Home/Banner.css
@@ -1,51 +1,46 @@
-.banner{
-    position: relative;
-    display: flex;
-    align-self:center;
-    /* padding-top: 10rem; */
-    color:white;
-    left: 50%; 
-    transform: translateX(-50%);
-    object-fit:contain;
-    margin: 2rem 0;
-    /* margin-left: var(--sidebar-width); */
-    border-radius: 35px;
-    object-position: top;
-    height: 25rem;
-    width: 60rem;
+.banner {
+  position: relative;
+  display: flex;
+  align-self: center;
+  /* padding-top: 10rem; */
+  color: white;
+  /* left: 50%; 
+    transform: translateX(-50%); */
+  object-fit: contain;
+  margin: 1rem calc(var(--sidebar-width) + 1.5rem);
+  border-radius: 35px;
+  object-position: top;
+  height: 25rem;
 }
-.banner_contents{
-    position: absolute;
-    bottom: 1rem;
-    margin-left: 30px;
+.banner_contents {
+  position: absolute;
+  bottom: 1rem;
+  margin-left: 30px;
 }
-.banner_title{
-    padding-bottom: 1rem;
-    font-size: 1.3rem;
-    font-weight: 800;
-    color: white;
+.banner_title {
+  padding-bottom: 1rem;
+  font-size: 1.3rem;
+  font-weight: 800;
+  color: white;
 }
-.banner_description{
-    /* width: 45rem; */
-    line-height: 2rem;
-    letter-spacing: .1rem;
-    padding-top: 1rem;
-    font-size: 1.2rem;
-    max-width: 550px;
+.banner_description {
+  /* width: 45rem; */
+  line-height: 2rem;
+  letter-spacing: 0.1rem;
+  padding-top: 1rem;
+  font-size: 1.2rem;
+  max-width: 550px;
 }
 
-
-
-@media screen and (min-width:100px) and (max-width:1000px){
-    .banner{
-        height: 300px;
-    }
-    .banner_contents{
-        padding-top: 45px;
-        height: 100px;
-    }
-    .banner_title{
-        font-size: 2rem;
-    }
-    
+@media screen and (min-width: 100px) and (max-width: 1000px) {
+  .banner {
+    height: 300px;
+  }
+  .banner_contents {
+    padding-top: 45px;
+    height: 100px;
+  }
+  .banner_title {
+    font-size: 2rem;
+  }
 }
