--- a/src/components/Home/Leftbar.css
+++ b/src/components/Home/Leftbar.css
@@ -1,52 +1,61 @@
 .sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    width: var(--sidebar-width);
-    background-color: #fff;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: var(--sidebar-width);
+  background-color: #fff;
+  border-right: 2px solid #55555515;
 }
-    .sidebar__logo {
-        display: grid;
-        place-items: center;
-        height: 120px;
-        font-size: 1.5rem;
-        font-weight: 700;
-        font-family: 'Mochiy Pop P one', sans-serif;
-    }
 
-    .sidebar__menu {
-        position: relative;
-    }
-    .sidebar__menu__item {
-            display: flex;
-            align-items: center;
-            place-content: flex-start;
-            padding: 1rem 3rem;
-            font-size: 1.25rem;
-            font-weight: 500;
-            color: #555555;
-            transition: color 0.3s ease-in-out;
-    }
-    .sidebar .active {
-                color: #fff;
-            }
+.sidebar__logo {
+  display: grid;
+  place-items: center;
+  height: 90px;
+  font-size: 1.5rem;
+  padding: 1.5rem 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  font-weight: 700;
+}
+.sidebar__logo i {
+  color: #308efe;
+}
 
-            .sidebar__menu__item__icon {
-                margin-right: 1rem;
-            }
-                i {
-                    font-size: 1.75rem;
-                }
+.sidebar__menu {
+  position: relative;
+}
+.sidebar__menu__item {
+  display: flex;
+  align-items: center;
+  place-content: flex-start;
+  padding: 1rem 3rem;
+  font-size: 1rem;
+  font-weight: 500;
+  color: #555555;
+  transition: color 0.3s ease-in-out;
+}
+.sidebar .active {
+  color: #fff;
+}
 
-                .sidebar__menu__indicator {
-            position: absolute;
-            top: 0;
-            left: 50%;
-            width: calc(100% - 40px);
-            border-radius: 10px;
-            background-color: #308efe;
-            z-index: -1;
-            transform: translateX(-50%);
-            transition: 0.3s ease-in-out;
-        }
+.sidebar__menu__item__icon {
+  margin-right: 1rem;
+}
+i {
+  font-size: 1.75rem;
+}
+
+.sidebar__menu__indicator {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: calc(100% - 40px);
+  border-radius: 10px;
+  background-color: #308efe;
+  z-index: -1;
+  transform: translateX(-50%);
+  transition: 0.3s ease-in-out;
+}
