--- a/src/components/Home/Rows.css
+++ b/src/components/Home/Rows.css
@@ -1,15 +1,14 @@
 .row {
-  margin-left: 10px;
+  margin: 0 var(--sidebar-width);
   padding-top: 0.3rem;
 }
-
 
 .row_poster {
   position: relative;
   object-fit: contain;
   /* width: 100%; */
   border-radius: 35px;
-  max-height: 400px;
+  max-height: 340px;
   padding: 1rem;
   transition: transform 500ms;
 }
@@ -23,27 +22,27 @@
   scroll-behavior: smooth;
   overflow-y: hidden;
   overflow-x: scroll;
-  transition: .5s;
-  padding: 1.5rem;
+  transition: 0.5s;
+  padding: 1rem 1.5rem;
 }
-.rowTop{
+.rowTop {
   display: flex;
   justify-content: space-between;
   padding: 0rem 1.5rem;
   align-items: center;
 }
-.rowBtns{
+.rowBtns {
   display: flex;
-  gap: .5rem;
+  gap: 0.5rem;
 }
-.rowBtns div{
+.rowBtns div {
   cursor: pointer;
   border-radius: 50%;
   display: flex;
-  padding: .3rem;
+  padding: 0.3rem;
   border: 2px solid rgba(129, 117, 117, 0.401);
 }
-.rowBtns img{
+.rowBtns img {
   width: 20px;
   height: 20px;
 }
@@ -55,31 +54,30 @@
   filter: blur(.5px); */
   transform: scale(1.08);
 }
-.movies:hover .movie-content{
+.movies:hover .movie-content {
   display: flex;
 }
-.movie-content{
+.movie-content {
   display: none;
-  position:absolute;
-  height: 11rem;
+  position: absolute;
   flex-direction: column;
   color: #fff;
   width: 100%;
   font-size: 0.7rem;
-  bottom: .1rem;
-  padding-bottom: .5rem;
-  padding-left: 1rem;
-  gap: .8rem;
-  transition: .3s;
-
+  bottom: 2rem;
+  padding-bottom: 0.5rem;
+  padding-left: 2rem;
+  gap: 0.8rem;
+  transition: 0.3s;
 }
-.movie-btn{
-  width: 6rem;
+.movie-btn {
+  width: 8rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 .movies {
   cursor: pointer;
 }
-
 
 .dark-title {
   padding-bottom: 0.8rem;
@@ -128,5 +126,4 @@
   .row_largeposter {
     max-height: 350px;
   }
-  
 }
