Loading Animation Done !

--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@ a {
   outline: none;
   border: none;
   font-weight: 700;
-  border-radius: 0.2vw;
+  border-radius: 50px;
   padding-left: 2rem;
   padding-right: 2rem;
   margin-right: 1rem;
