--- a/src/components/Anime/Anime.css
+++ b/src/components/Anime/Anime.css
@@ -15,6 +15,7 @@
 }
 .leftImage {
   border-radius: 25px;
+  width: 100%;
   max-width: 20rem;
   height: auto;
 }
@@ -41,7 +42,8 @@
   flex-direction: column;
   align-items: center;
 }
-.bx-share {
+.bx-share,
+.bxs-share {
   -webkit-transform: scaleX(-1);
   transform: scaleX(-1);
 }
@@ -51,6 +53,9 @@
   grid-template-columns: 1fr 1fr 0.9fr;
   grid-template-rows: 0.3fr 0.8fr;
   border-bottom: 2px solid #55555515;
+}
+.Skelgap {
+  column-gap: 1rem !important;
 }
 .Righttitle,
 .Rightstory {
@@ -81,6 +86,7 @@
 }
 .storyDescripiton {
   padding: 1rem 0;
+  opacity: 80%;
 }
 .storyDetail {
   padding: 0.5rem 0;
@@ -92,4 +98,15 @@
 }
 .casts {
   padding: 1rem 0;
+}
+.castDetail h4 {
+  font-weight: 500;
+}
+.seeAlltag {
+  cursor: pointer;
+  color: #308efe;
+  text-decoration: underline;
+}
+.bxs-bookmark-star {
+  color: #308efe;
 }
