--- a/src/components/Home/Leftbar.css
+++ b/src/components/Home/Leftbar.css
@@ -9,10 +9,11 @@
 }
 
 .sidebar__logo {
+  cursor: pointer;
   display: grid;
   place-items: center;
   height: 90px;
-  font-size: 1.5rem;
+  font-size: 1.9rem;
   padding: 1.5rem 0;
   display: flex;
   align-items: center;
